# akeneo_mock_server

./: .gitignore  .gitmodules  .prettierrc  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  agents.md  get_failed_logs.py  get_pr_build.py  openapi_specification.yml  patch_schema.py  prek.toml  pyproject.toml  seed_data.py
.agents/: skills.lock.json
.claude/: settings.json
.github/workflows/: python-publish.yml  python-test.yml
akeneo_mock_server/: __init__.py  __main__.py  app.py  common.py  database.py  events.py  pagination.py  schema.sql  schemas.py  search_filters.py
akeneo_mock_server/routers/: admin.py  event_platform.py  oauth.py  rest.py  root.py
pim-api-docs/.circleci/tools/destroyer/: get_outdated_environment.py  remove_state_folder.py  terraform_destroy.py
py-pglite-work/: pglite_manager.js
tests/: conftest.py  test_api.py  test_attribute_options_patch.py  test_attribute_validations.py  test_contract.py  test_crud.py  test_events.py  test_families.py  test_family_attribute_validation.py  test_family_extra_validation.py  test_family_validation.py  test_pagination.py  test_product_model_pagination.py  test_product_models.py  test_search_filters.py  test_seeding.py
